Fixing text alignment on travel page to be left align for faq segments.

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,3 +134,10 @@ footer ul li a {
   color: #fff;
 }
 
+.travelContainer p, li{
+  text-align: left;
+}
+
+.travelQuestion p{
+  text-align: center;
+}
